--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "lodash": "^4.17.4",
     "moment": "^2.19.2",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "twilio": "^3.9.2"
   }
 }
