--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/RandomSeeded/T-Messenger#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
     "lodash": "^4.17.4",
     "moment": "^2.19.2",
     "request": "^2.83.0",
