--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   },
   "homepage": "https://github.com/RandomSeeded/T-Messenger#readme",
   "dependencies": {
+    "async": "^2.6.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "lodash": "^4.17.4",
     "moment": "^2.19.2",
+    "mongodb": "^2.2.33",
     "request": "^2.83.0",
     "twilio": "^3.9.2"
   }
